# SetupWeaver

./: Cargo.toml  README.md  index.html  run-gui.bat
.github/workflows/: auto-tag.yml  release.yml  rust.yml
common/src/: config.rs  lib.rs  packaged.rs  state.rs
docs/: ARCHITECTURE.md
examples/hello/: install-admin.toml
packager/: Cargo.toml
packager-gui/: Cargo.toml  build.rs  ui.slint
packager-gui/src/: main.rs
packager/src/: builder.rs  lib.rs  main.rs
packager/tests/: e2e.rs
runtime/: Cargo.toml  ui.slint
runtime-admin/: Cargo.toml  build.rs
runtime-admin/src/: main.rs
runtime/src/: app.rs  engine.rs  lib.rs  payload.rs
runtime/src/ui/: mod.rs
