[workspace]
members = ["common", "packager", "runtime", "runtime-admin"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
indicatif = "0.17"
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tar = "0.4"
walkdir = "2.5"
zstd = "0.13"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
