[package]
name = "setupweaver-packager"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "setupweaver-packager"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
glob.workspace = true
indicatif.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
zstd.workspace = true
setupweaver-common = { path = "../common" }
