[package]
name = "setupweaver-runtime-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "setupweaver-runtime-admin"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
setupweaver-runtime = { path = "../runtime" }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
