[package]
name = "setupweaver-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "setupweaver-runtime"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
memmap2.workspace = true
rayon.workspace = true
slint = { version = "1.7", default-features = false, features = ["renderer-software", "backend-winit", "std", "compat-1-2"] }
thiserror.workspace = true
toml.workspace = true
zstd.workspace = true
setupweaver-common = { path = "../common" }

[build-dependencies]
slint-build = "1.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.55"
